--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-streamlit
 pandas
-scikit-learn
-joblib
+numpy
+nltk
+langdetect
+deep-translator
+Sastrawi
+googletrans==4.0.0-rc1
 matplotlib
-wordcloud
+joblib
+scikit-learn
 xgboost
+wordcloud
+streamlit
+emoji
